@@ -1,6 +1,7 @@
 meecast (0.6.9) unstable; urgency=low
 
   * Fixed icon ICY in Epona set 
+  * Fixed problem with current weather in gismeteo.ru source
 
  -- Vlad Vasiliev <vlad@gas.by>  Mon, 19 Nov 2012 19:31:23 +0200
 
